tests/snapshots/cli__i10_stdin_to_file.snap
---
source: tests/cli.rs
expression: output_content
---
# Source from STDIN

The output was redirected to a file.
