tests/snapshots/cli__i1_help.snap
---
source: tests/cli.rs
expression: redact_version(&stdout)
---
Splice and modify Markdown files with AST-level precision.

Usage: md-splice [OPTIONS] <COMMAND>

Commands:
  insert       Insert new Markdown content at a specified position
  replace      Replace a Markdown node with new content
  delete       Delete a Markdown node or section
  get          Read Markdown content matching a selector without modifying the file
  apply        Apply a sequence of transactional operations to the document
  frontmatter  Inspect or modify document frontmatter
  help         Print this message or the help of the given subcommand(s)

Options:
  -f, --file <FILE_PATH>      The Markdown file to modify. [default: reads from stdin]
  -o, --output <OUTPUT_PATH>  Write the output to a new file instead of modifying the original
  -h, --help                  Print help
  -V, --version               Print version
