tests/snapshots/cli__i2_insert_output.snap
---
source: tests/cli.rs
expression: output_content
---
# Title

First paragraph.

## A New Subheading

*And a list item.*

Second paragraph.
