tests/snapshots/cli__i7_source_from_stdin.snap
---
source: tests/cli.rs
expression: stdout
---
# Source from STDIN

This paragraph was replaced via STDIN.
