tests/snapshots/cli__li4_nested_list_insert.snap
---
source: tests/cli.rs
expression: output_content
---
# My Tasks

 - [X] Buy milk
 - [ ] Write the report
   
    - [ ] Write the first section
 - [ ] Call the client
